# sdl-example

./: .gitignore  CMakeLists.txt  main.cpp
cmake/modules/: FindSDL2.cmake
